# sim_uav_filter

./: .gitignore  main.py  requirements.txt  run_validation.py
data/: README.md
data/examples/: innovations.csv
docs/: README.md  architecture.md  log_format.md
ekf2_core/: CMakeLists.txt
ekf2_core/include/: ekf.h  state.h
ekf2_core/src/: buffer.cpp  covariance.cpp  ekf.cpp  gps_update.cpp  imu_update.cpp  replay_main.cpp
eskf/: __init__.py  eskf.py
filters/: README.md  __init__.py
filters/eskf_core_cpp/: CMakeLists.txt  README.md
filters/eskf_core_cpp/include/eskf/: config.hpp  eskf.hpp  eskf_types.hpp  innovations.hpp  math.hpp  ring_buffer.hpp  sensors.hpp  static_matrix.hpp
filters/eskf_core_cpp/src/: baro_update.cpp  eskf.cpp  gps_update.cpp  imu_propagation.cpp  mag_update.cpp  numerics.cpp
filters/eskf_core_cpp/tests/: README.md  test_buffer.cpp  test_consistency.cpp  test_math.cpp
filters/eskf_core_cpp/tools/: bench_main.cpp  replay_main.cpp
gui/: README.md  app.py  data_adapter.py
gui/tabs/: __init__.py  tab_attitude_euler.py  tab_bias.py  tab_innovations.py  tab_position.py  tab_quaternion.py  tab_velocity.py
gui/widgets/: __init__.py  plot_timeseries.py
outputs/: mc_report.txt  sensor_log.csv
sim/: README.md  __init__.py  __main__.py  app.py  cli.py  config.py  timebase.py
sim/dynamics/: __init__.py  atmosphere.py  rigid_body_6dof.py
sim/gui/: README.md  dashboard.py  widgets_attitude.py  widgets_plots.py  widgets_table.py
sim/io/: __init__.py  logger_csv.py  schema.py
sim/scenario/: README.md  __init__.py  phase_scheduler.py  phases.py
sim/sensors/: README.md  __init__.py  baro.py  gps.py  imu.py  mag.py  models.py
sim/utils/: __init__.py  math3d.py  ring_buffer.py  units.py
simulator/: __init__.py  config.py  dynamics.py  mission.py  sensors.py
validation/: __init__.py  innovation.py  monte_carlo.py  nees.py
visualization/: __init__.py  animation.py  dashboard.py
